[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/nidsans-webfont - Copy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://images/healthbar_green.png" type="Texture" id=2]
[ext_resource path="res://InGameUI.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="InGameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoCountLabel" type="Label" parent="."]
margin_left = 850.0
margin_top = 538.0
margin_right = 890.0
margin_bottom = 552.0
custom_fonts/font = SubResource( 1 )
text = "200"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReserveAmmoCountLabel" type="Label" parent="."]
margin_left = 944.0
margin_top = 553.0
margin_right = 1001.0
margin_bottom = 593.0
custom_fonts/font = SubResource( 2 )
text = "200"

[node name="HealthBarTexture" type="TextureRect" parent="."]
margin_left = 7.0
margin_top = 25.0
margin_right = 207.0
margin_bottom = 65.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarLabel" type="Label" parent="."]
margin_left = 96.0
margin_top = 28.0
margin_right = 136.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaneTypeLabel" type="Label" parent="."]
margin_left = 936.0
margin_top = 509.0
margin_right = 996.0
margin_bottom = 530.0
custom_fonts/font = SubResource( 4 )
text = "Spitfire"
__meta__ = {
"_edit_use_anchors_": false
}
